--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "bootstrap4-vue": "^0.3.12",
-    "firebase": "^5.5.6",
-    "materialize-css": "^1.0.0-rc.2",
+    "firebase": "^5.5.7",
+    "materialize-css": "^1.0.0",
+    "npm": "^6.4.1",
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
     "vuefire": "^1.4.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.0",
-    "@vue/cli-plugin-eslint": "^3.1.0",
-    "@vue/cli-service": "^3.1.0",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-eslint": "^3.1.4",
+    "@vue/cli-service": "^3.1.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
